--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ httpx-sse==0.4.0
 huggingface-hub==0.29.2
 idna==3.10
 packaging==24.2
+pika==1.3.2
 pydantic==2.10.6
 pydantic_core==2.27.2
 python-dotenv==1.0.1
